JumpScript/tests/baselines/reference/parser.asyncGenerators.functionExpressions.esnext.errors.txt
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitInParameterInitializerIsError.jump(1,34): error TS2524: 'await' expressions cannot be used in a parameter initializer.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitMissingValueIsError.jump(2,10): error TS1109: Expression expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitNameIsError.jump(1,29): error TS1005: '(' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitNameIsError.jump(1,29): error TS2451: Cannot redeclare block-scoped variable 'await'.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitNameIsError.jump(1,34): error TS1005: ',' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitNameIsError.jump(1,37): error TS1005: '=>' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitParameterIsError.jump(1,30): error TS1138: Parameter declaration expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitParameterIsError.jump(1,30): error TS2451: Cannot redeclare block-scoped variable 'await'.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitParameterIsError.jump(1,35): error TS1005: ',' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionDeclarationNamedAwaitIsError.jump(2,14): error TS1003: Identifier expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionDeclarationNamedAwaitIsError.jump(2,20): error TS1109: Expression expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionDeclarationNamedAwaitIsError.jump(2,22): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionDeclarationNamedYieldIsError.jump(2,14): error TS1003: Identifier expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionDeclarationNamedYieldIsError.jump(2,22): error TS1005: '=>' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionExpressionNamedAwaitIsError.jump(2,24): error TS1005: '(' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionExpressionNamedAwaitIsError.jump(2,30): error TS1109: Expression expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionExpressionNamedAwaitIsError.jump(2,32): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionExpressionNamedYieldIsError.jump(2,24): error TS1005: '(' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionExpressionNamedYieldIsError.jump(2,32): error TS1005: '=>' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldInParameterInitializerIsError.jump(1,34): error TS2523: 'yield' expressions cannot be used in a parameter initializer.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldNameIsError.jump(1,29): error TS1005: '(' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldNameIsError.jump(1,29): error TS2451: Cannot redeclare block-scoped variable 'yield'.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldNameIsError.jump(1,34): error TS1005: ',' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldNameIsError.jump(1,37): error TS1005: '=>' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldParameterIsError.jump(1,30): error TS1138: Parameter declaration expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldParameterIsError.jump(1,30): error TS2451: Cannot redeclare block-scoped variable 'yield'.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldParameterIsError.jump(1,35): error TS1005: ',' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldStarMissingValueIsError.jump(2,12): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/functionExpressionIsOk.jump (0 errors) ====
    const f1 = async function * f() {
    };
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitNameIsError.jump (4 errors) ====
    const f2 = async function * await() {
                                ~~~~~
!!! error TS1005: '(' expected.
                                ~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'await'.
                                     ~
!!! error TS1005: ',' expected.
                                        ~
!!! error TS1005: '=>' expected.
    };
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldNameIsError.jump (4 errors) ====
    const f3 = async function * yield() {
                                ~~~~~
!!! error TS1005: '(' expected.
                                ~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'yield'.
                                     ~
!!! error TS1005: ',' expected.
                                        ~
!!! error TS1005: '=>' expected.
    };
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitParameterIsError.jump (3 errors) ====
    const f4 = async function * (await) {
                                 ~~~~~
!!! error TS1138: Parameter declaration expected.
                                 ~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'await'.
                                      ~
!!! error TS1005: ',' expected.
    };
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldParameterIsError.jump (3 errors) ====
    const f5 = async function * (yield) {
                                 ~~~~~
!!! error TS1138: Parameter declaration expected.
                                 ~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'yield'.
                                      ~
!!! error TS1005: ',' expected.
    };
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitInParameterInitializerIsError.jump (1 errors) ====
    const f6 = async function * (a = await 1) {
                                     ~~~~~~~
!!! error TS2524: 'await' expressions cannot be used in a parameter initializer.
    };
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldInParameterInitializerIsError.jump (1 errors) ====
    const f7 = async function * (a = yield) {
                                     ~~~~~
!!! error TS2523: 'yield' expressions cannot be used in a parameter initializer.
    };
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedAsyncGeneratorIsOk.jump (0 errors) ====
    const f8 = async function * () {
        async function * g() {
        }
    };
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionDeclarationNamedYieldIsError.jump (2 errors) ====
    const f9 = async function * () {
        function yield() {
                 ~~~~~
!!! error TS1003: Identifier expected.
                         ~
!!! error TS1005: '=>' expected.
        }
    };
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionExpressionNamedYieldIsError.jump (2 errors) ====
    const f10 = async function * () {
        const x = function yield() {
                           ~~~~~
!!! error TS1005: '(' expected.
                                   ~
!!! error TS1005: '=>' expected.
        };
    };
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionDeclarationNamedAwaitIsError.jump (3 errors) ====
    const f11 = async function * () {
        function await() {
                 ~~~~~
!!! error TS1003: Identifier expected.
                       ~
!!! error TS1109: Expression expected.
                         ~
!!! error TS1005: ';' expected.
        }
    };
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionExpressionNamedAwaitIsError.jump (3 errors) ====
    const f12 = async function * () {
        const x = function await() {
                           ~~~~~
!!! error TS1005: '(' expected.
                                 ~
!!! error TS1109: Expression expected.
                                   ~
!!! error TS1005: ';' expected.
        };
    };
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldIsOk.jump (0 errors) ====
    const f13 = async function * () {
        yield;
    };
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldWithValueIsOk.jump (0 errors) ====
    const f14 = async function * () {
        yield 1;
    };
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldStarMissingValueIsError.jump (1 errors) ====
    const f15 = async function * () {
        yield *;
               ~
!!! error TS1109: Expression expected.
    };
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldStarWithValueIsOk.jump (0 errors) ====
    const f16 = async function * () {
        yield * [];
    };
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitWithValueIsOk.jump (0 errors) ====
    const f17 = async function * () {
        await 1;
    };
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitMissingValueIsError.jump (1 errors) ====
    const f18 = async function * () {
        await;
             ~
!!! error TS1109: Expression expected.
    };
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitAsTypeIsOk.jump (0 errors) ====
    interface await {}
    const f19 = async function * () {
        let x: await;
    };
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldAsTypeIsOk.jump (0 errors) ====
    interface yield {}
    const f20 = async function * () {
        let x: yield;
    };
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldInNestedComputedPropertyIsOk.jump (0 errors) ====
    const f21 = async function *() {
        const x = { [yield]: 1 };
    };
    